--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "ahooks": "^3.7.5",
     "cssstyle": "^2.3.0",
     "gh-pages": "^5.0.0",
     "prop-types": "^15.8.1",
